add favorites to /wiki/search, /sodan
